[package]
name = "checkpwn_lib"
version = "0.1.0" # Update html_root_url in lib.rs along with this.
authors = ["brycx <brycx@protonmail.com>"]
description = "Library to interact with the HIBP API"
keywords = [ "password", "breaches", "HIBP", "security" ]
categories = [ "cryptography" ]
readme = "README.md"
edition = "2018"
repository = "https://github.com/brycx/checkpwn-lib"
license = "MIT"

[dependencies]
sha-1 = { version = "0.9.1", default-features = false }
hex = "0.4.2"
ureq = { version = "2.0.0", default-features = false, features = ["tls"] }
zeroize = "1.1.1"

[features]
ci_test = []
